feat: remove browser notifications system
- Remove notifications toggle switches from config panel
- Remove notifications.js module entirely (browser notifications)
- Remove import and setupNotificationListener from socket.js
- Remove notificationsEnabled and notificationsSound from state
- Keep toast notification system as the sole notification method
- Toast settings remain in the Notificaciones column

--- a/templates/config.html
+++ b/templates/config.html
@@ -62,25 +62,11 @@
 
                     <!-- Notificaciones (tercio derecho) -->
                     <div class="fused-third notifications-third">
-                        <h4>🔔 Notificaciones</h4>
-                        <div class="input-group">
-                            <label for="notificationsEnabled">Habilitar Notificaciones</label>
-                            <label class="theme-switch">
-                                <input type="checkbox" id="notificationsEnabled">
-                                <span class="slider"></span>
-                            </label>
-                        </div>
-                        <div class="input-group">
-                            <label for="notificationsSound">Sonido de Notificaciones</label>
-                            <label class="theme-switch">
-                                <input type="checkbox" id="notificationsSound">
-                                <span class="slider"></span>
-                            </label>
-                        </div>
+                        <h4>🍞 Toast</h4>
                         
-                        <!-- Configuración de Toast integrada -->
-                        <div class="toast-config-inline">
-                            <h5>🍞 Toast</h5>
+                        <!-- Configuración de Toast -->
+                        <div class="toast-config-inline" style="margin-top: 0; padding-top: 0; border-top: none;">
+                            <h5 style="display: none;">Toast</h5>
                             <div class="toast-config-row">
                                 <label for="toastDuration">Duración</label>
                                 <div class="range-with-value compact">
