--- a/templates/config.html
+++ b/templates/config.html
@@ -75,10 +75,9 @@
                             </div>
                             <div class="toast-config-row">
                                 <label for="toastDuration">Duración</label>
-                                <div class="range-with-value compact">
-                                    <input type="range" id="toastDuration" min="2" max="10" value="5">
-                                    <span id="toastDurationValue">5s</span>
-                                </div>
+                                <input type="number" id="toastDuration" min="1" max="30" value="5" class="compact-number-input">
+                                <span style="font-size: 12px; color: var(--text-medium);">seg.</span>
+                            </div>
                             </div>
                             <div class="toast-config-row">
                                 <label for="toastPosition">Posición</label>
