--- a/templates/config.html
+++ b/templates/config.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 <div class="config-container">
-    <div class="config-tabs">
-        <button class="tab-link active" data-tab="servers">🗄️ Servidores</button>
-        <button class="tab-link" data-tab="settings">⚙️ Ajustes del Sistema</button>
-    </div>
+    <nav class="config-tabs">
+        <a href="#" class="tab-link active" data-tab="servers">🗄️ Servidores</a>
+        <a href="#" class="tab-link" data-tab="settings">⚙️ Ajustes del Sistema</a>
+    </nav>
 
     <!-- Pestana de Servidores -->
     <div id="servers" class="tab-content active">
