fix: remove border-radius from config tabs for main-nav parity

--- a/static/css/modules/components.css
+++ b/static/css/modules/components.css
@@ -215,6 +215,7 @@ body.dark-mode .chart-container { color: var(--text-dark); }
     border-left: none;
     border-top: none;
     border-right: none;
+    border-radius: 0;
     font-size: 14px;
 }
 
